# com.playscope.sdk

./: .gitattributes  .gitignore  package.json
.github/workflows/: build-native.yml  gen_so_meta.py  release.yml
Documentation/: api-reference.md  changelog.md  configuration.md  dashboard-navigator.md  index.md  integration-guide.md
Editor/: PlayScope.Editor.asmdef  PlayScopeBuildInfoGenerator.cs  PlayScopeBuildSettings.cs  PlayScopeNativePluginInstaller.cs  PlayScopeSdk.Editor.asmdef  PlayScopeSessionCacheMenu.cs  PlayScopeSettingsMenu.cs  PlayScopeSymbolUploader.cs  PlayScopeVersionChecker.cs
Plugins/Android/: PlayScopeCrash.java  PlayScopeLifecycle.java  PlayScopeNativeMetrics.java
Plugins/Android/native_src/playscope_crash/: CMakeLists.txt  playscope_crash.cpp
Plugins/iOS/: PlayScopeLifecycle.mm  PlayScopeNativeMetrics.mm
Resources/: PlayScopeBuildInfo.asset
Runtime/: AdMetadata.cs  AssemblyInfo.cs  PlayScope.Runtime.asmdef  PlayScope.cs  PlayScopeSdk.asmdef  PlayScopeSettings.cs  PurchaseMetadata.cs
Runtime/Core/: LogLevel.cs  OperationCompletionStatus.cs  OperationType.cs  PlayScopeContext.cs
Runtime/Internal/: AnrWatchdog.cs  EventPipeline.cs  EventQueue.cs  EventRecord.cs  HeartbeatWorker.cs  LogDedupBuffer.cs  MetricsSampler.cs  NativeLifecycleBridge.cs  NativeMetricsBridge.cs  PiiValueScanner.cs  PlayScopeBuildInfo.cs  PlayScopeCrashCollector.cs  PlayScopeEditorPlayModeHook.cs  PlayScopeLog.cs  PlayScopeMonoBehaviour.cs  PlayScopeRuntime.cs  SceneLoadProgressTracker.cs  SensitiveKeyFilter.cs  SequenceCounter.cs  SessionDataCoalescer.cs  (+8 more)
(+59 files in other folders)
